tests/paczka1/fuzzy1/66626655.err
Error in line 1: A777 S516 81,8
Error in line 2: 7SLYf1qdCZ A777 44,1
Error in line 9: ZxhTsp A676 16,4
Error in line 12: IWG S516 81,4
Error in line 11: WfdDu A777 13,6
Error in line 22: Dd7I A676 51,8
Error in line 23: Dd7I S516 51,3
Error in line 35: IWG A676 66,1
Error in line 40: A777 A777 38,72
